2015-02-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* configure.ac: Check for posix_openpt in AC_CHECK_FUNCS, and 
	set automake conditional "have_ptys" depending on result.
	* info/Makefile.am (check_PROGRAMS): Build of "pseudotty" 
	dependent upon "have_ptys".
	* info/t/Init-inter.inc: Skip test if pseudotty not built.

2015-02-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/man.c (get_manpage_from_formatter)
	[PIPE_USE_FORK, !PIPE_USE_FORK]: If exit status of "man" command 
	is non-zero, throw away its output.  Report from Eli Zaretskii.

2015-02-25  Eli Zaretskii  <eliz@gnu.org>

	* info/pcterm.c (w32_info_prep, w32_info_unprep, w32_cleanup)
	(gettextinfo, textattr, ScreenGetCursor, ScreenSetCursor)
	(ScreenClear, clreol, ScreenVisualBell, movetext, ScreenRows)
	(ScreenCols, _set_screen_lines, w32_set_screen_dimensions)
	(pc_put_text, pc_write_chars, pc_unprep_terminal) [_WIN32]: Do the
	minimum (mostly, nothing) when not connected to the terminal
	device.

2015-02-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infomap.c (fetch_user_maps): Print an error message if 
	couldn't open init file specified with --init-file.

2015-02-24  Eli Zaretskii  <eliz@gnu.org>

	* info/terminal.c [HAVE_NCURSES_TERMCAP_H && __MINGW32__]: Don't
	include ncurses/termcap.h on MinGW, even if it's available, to
	avoid a useless run-time dependency on the ncurses shared library.

2015-02-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi: Remove obsolete note about running
	'texinfo-all-menus-update' in Emacs.

2015-02-22  Karl Berry  <karl@gnu.org>

	* pretest 5.9.90.
	* configure.ac: version.
	
	* util/srclist.txt: sync po_document/Makefile.in.in.
	* configure.ac, etc.: finish gettext 0.19.4 update.

2015-02-22  Karl Berry  <karl@gnu.org>

	* tp/maintain/template.pod: tweak text, add __HTML signal.
	* tp/maintain/regenerate_converters_documentation.sh: HTML-specific.
	* tp/Makefile.am (do-pm-doc): new target to call that script.